--- a/src/assets/styles/Contact.scss
+++ b/src/assets/styles/Contact.scss
@@ -2,10 +2,11 @@
   font-size: 1em;
   vertical-align: middle;
   margin-right: 5px;
+  background-color:rgb(244, 250, 255);
 }
 
 .contact-form {
-  padding-top: 20px;
+  padding-top: 30px;
 
   button {
     float: right;
@@ -15,12 +16,14 @@
 
   button:hover {
     background-color: #5000ca;
-    color: white;
+    color: black;
   }
 
-  fieldset {
-    background-color: white;
-  }
+  //fieldset {
+    //background-color: white(11, 6, 6);
+    background-color:  white(11, 6, 6);
+  //}
+  
 }
 
 label {
@@ -32,7 +35,9 @@ label {
   display: flex;
   gap: 15px;
   padding-bottom: 15px;
+
 }
+
 
 .form-flex .MuiFormControl-root {
   width: 100%;
@@ -46,3 +51,7 @@ form {
   width: 100% !important;
   margin-bottom: 15px !important;
 }
+
+ // .input__{
+  //  color: rgb(235, 218, 218) !important;
+//  }
