--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -53,14 +53,14 @@
 
 @media (max-width: 567px) {
     .about-section h1 {
-        font-size: 2.5em !important; /* Reduce size for small screens */
+        font-size: 2.0em !important; /* Reduce size for small screens */
         text-align: center; /* Center align for better readability */
-        word-break: break-word; /* Ensure the name wraps correctly */
+        /*word-break: break-word;  Ensure the name wraps correctly */
         overflow-wrap: break-word;
     }
 }
 .about-section h1 {
-    font-size: 8vw; /* Adjust as needed */
+    font-size: 5vw; /* Adjust as needed */
 }
 .about-section h1 {
     max-width: 90%;
