--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -53,19 +53,19 @@
 
 @media (max-width: 567px) {
     .about-section h1 {
-        font-size: 2.0em !important; /* Reduce size for small screens */
+        font-size: 1.5em !important; /* Reduce size for small screens */
         text-align: center; /* Center align for better readability */
-        /*word-break: break-word;  Ensure the name wraps correctly */
+        word-break: break-word; /* Ensure the name wraps correctly */
         overflow-wrap: break-word;
     }
 }
-.about-section h1 {
-    font-size: 5vw; /* Adjust as needed */
+/*.about-section h1 {
+    font-size: 5vw;
 }
 .about-section h1 {
     max-width: 90%;
     white-space: normal;
-}
+}*/
 
 
 
