--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -59,15 +59,15 @@
         overflow-wrap: break-word;
     }
 }
-*/
+/*
 .about-section h1 {
     font-size: 2vw;
 }
-/*
+*/
 .about-section h1 {
     max-width: 90%;
     white-space: normal;
-}*/
+}
 
 
 
