--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -55,9 +55,8 @@
     .about-section h1 {
         font-size: 0.6em !important; 
         text-align: center;
-        white-space: nowrap;
-        /*word-break: break-word; 
-        overflow-wrap: break-word;*/
+        word-break: break-word; 
+        /*overflow-wrap: break-word;*/
     }
 }
 /*
