--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -53,7 +53,7 @@
 
 @media (max-width: 567px) {
     .about-section h1 {
-        font-size: 0.3em !important; 
+        font-size: 2.5rem !important; 
         /*text-align: center;*/
         word-break: break-word; 
         /*overflow-wrap: break-word;*/
