--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -50,17 +50,15 @@
 }
 
 /* Adjust based on testing */
-
+/*
 @media (max-width: 567px) {
     .about-section h1 {
-        font-size: 2vw !important;
-        /*font-size: 10px !important; 
-        /*font-size: 2.5rem !important;*/ 
-        /*text-align: center;*/
+        font-size: 2.5rem !important;
         word-break: break-word; 
-        /*overflow-wrap: break-word;*/
+        overflow-wrap: break-word;
     }
 }
+*/
 /*
 .about-section h1 {
     font-size: 2vw;
@@ -90,6 +88,10 @@
 
 @media screen {
     @media (max-width: 567px) {
+        .about-section h1 {
+            font-size: 2em !important;
+            text-align: left;
+        }
         .nav-left{
             padding-top: 20px;
             float:left;
