--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -94,13 +94,16 @@
         .about-section .content {
             h1 {
                 font-size: 3em !important;
+                padding: 0px 0px 0px 0px !important;
+                word-break: break-word;
+                text-align: left;
             }
         }
-        .about-section h1 {
+        /*.about-section h1 {
             font-size: 3em !important;
             word-break: break-word;
             text-align: left;
-        }
+        }*/
         .nav-left{
             padding-top: 20px;
             float:left;
